<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.updateLocation.UpdateLocationFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="357dp"
        android:layout_height="167dp"
        android:background="@drawable/rect_rounded_button"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382">

        <EditText
            android:id="@+id/name"
            android:layout_width="317dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/rect_rounded"
            android:fontFamily="sans-serif-light"
            android:hint="Name..."
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="317dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect_rounded"
            android:fontFamily="sans-serif-light"
            android:hint="Location..."
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />
</androidx.constraintlayout.widget.ConstraintLayout>