<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_locations"
        android:title="@string/title_notifications" />

</menu>